add div, fix btn

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,31 +13,53 @@
 </head>
 <body>
 <header>
-        <nav class="header">
-        <a class="logo link" href="./index.html" lang="en">
-            <span class="accent">Web</span><span class="text">Studio</span>
-        </a>
-        <ul class="site-nav list">
-            <li><a class="site-nav-link link" href="./index.html">Студия</a></li>
-            <li><a class="site-nav-link link current" href="./portfolio.html">Портфолио</a></li>
-            <li><a class="site-nav-link link" href="#">Контакты</a></li>
-        </ul>
+    <div class="container">
+        <nav class="header"> 
+            <a class="logo link" href="./index.html" lang="en">
+                <span class="accent">Web</span><span class="text">Studio</span>
+            </a>
+            <ul class="site-nav list">
+                <li> 
+                    <a class="site-nav-link link" href="./index.html">Студия</a>
+                </li>
+                <li>
+                    <a class="site-nav-link link current" href="./portfolio.html">Портфолио</a>
+                </li>
+                <li>
+                    <a class="site-nav-link link" href="#">Контакты</a>
+                </li>
+            </ul>
         </nav>
         <ul class="contacts list">
-            <Li><a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></Li>
-            <Li><a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a></Li>
+            <li> 
+                <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a> 
+            </li>
+            <li>
+                <a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
         </ul>
+    </div>
 </header>
 
 <main>
-<section class="portfolio">
+<section class="portfolio container">
     <h1 class="invisible">Портфолио</h1>
     <ul class="buttons list">
-        <li><button class="port-btn button-all" type="button">Все</button></li>
-        <li><button class="port-btn button-veb" type="button">Веб-сайты</button></li>
-        <li><button class="port-btn button-app" type="button">Приложения</button></li>
-        <li><button class="port-btn button-des" type="button">Дизайн</button></li>
-        <li><button class="port-btn button-mar" type="button">Маркетинг</button></li>
+        <li>
+            <button class="port-btn button-all" type="button">Все</button>
+        </li>
+        <li>
+            <button class="port-btn button-veb" type="button">Веб-сайты</button>
+        </li>
+        <li>
+            <button class="port-btn button-app" type="button">Приложения</button>
+        </li>
+        <li>
+            <button class="port-btn button-des" type="button">Дизайн</button>
+        </li>
+        <li>
+            <button class="port-btn button-mar" type="button">Маркетинг</button>
+        </li>
     </ul>
     <ul class="example list">
         <li>
@@ -108,16 +130,24 @@
 </main>   
 
 <footer class="footer">
-    <a href="./index.html" class="logo link" lang="en">
-        <span class="accent">Web</span><span class="text">Studio</span>
-    </a>
-    <address>
-        <ul class="address list">
-            <li><a class="fact link" href="https://goo.gl/maps/kG6ZxLyjDZMwMeht5" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></Li>
-            <li><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></Li>
-            <li><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></Li>
-        </ul>
-    </address>
+    <div class="container">
+        <a href="./index.html" class="logo link" lang="en">
+            <span class="accent">Web</span><span class="text">Studio</span>
+        </a>
+        <address>
+            <ul class="address list">
+                <li>
+                    <a class="fact link" href="https://goo.gl/maps/kG6ZxLyjDZMwMeht5" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li>
+                    <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </address>
+    </div>
 </footer>
 
 </body>
