--- a/index.html
+++ b/index.html
@@ -13,29 +13,43 @@
 </head>
 <body>
 <header>
-    <nav class="header">
-    <a class="logo link" href="./index.html" lang="en">
-        <span class="accent">Web</span><span class="text">Studio</span>
-    </a>
-    <ul class="site-nav list">
-        <li><a class="site-nav-link link current" href="./index.html">Студия</a></li>
-        <li><a class="site-nav-link link" href="./portfolio.html">Портфолио</a></li>
-        <li><a class="site-nav-link link" href="#" >Контакты</a></li>
-    </ul>
-    </nav>
-    <ul class="contacts list">
-        <Li><a class="contacts-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a></Li>
-        <Li><a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a></Li>
-    </ul>
+    <div class="container">
+        <nav class="header">
+            <a class="logo link" href="./index.html" lang="en">
+                <span class="accent">Web</span><span class="text">Studio</span>
+            </a>
+            <ul class="site-nav list">
+                <li>
+                <a class="site-nav-link link current" href="./index.html">Студия</a>
+                </li>
+                <li>
+                <a class="site-nav-link link" href="./portfolio.html">Портфолио</a>
+                </li>
+                <li>
+                <a class="site-nav-link link" href="#" >Контакты</a>
+                </li>
+            </ul>
+        </nav>
+        <ul class="contacts list">
+            <li>
+                <a class="contacts-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a>
+            </li>
+            <li>
+                <a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
+    </div>
 </header>
 
 <main>
     <section class="hero">
-        <h1 class="main">Эффективные решения для вашего бизнеса</h1>
-        <button class="button" type="button">Заказать услугу</button>
+        <div class="container">
+            <h1 class="main">Эффективные решения для вашего бизнеса</h1>
+            <button class="button" type="button">Заказать услугу</button>
+        </div>
     </section>
 
-    <section class="characteristic">
+    <section class="characteristic container">
         <h2 class="invisible">Особенности</h2>
         <ul class="distinction list">
             <li>
@@ -49,24 +63,30 @@
             <li> 
                 <h3 class="title">Планирование </h3>
                 <p class="point">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-             </li>
-             <li> 
+            </li>
+            <li> 
                 <h3 class="title">Современные технологии</h3>
                 <p class="point">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
     </section>
 
-    <section class="essential">
+    <section class="essential container">
         <h2 class="title">Чем мы занимаемся</h2>
         <ul class="images list">
-            <li><img src="./images/img1.jpg" alt="Десктопные приложения" width=370></li>
-            <li><img src="./images/img2.jpg" alt="Мобильные приложения" width=370></li>
-            <li><img src="./images/img3.jpg" alt="Дизайнерские решения" width=370></li>
+            <li>
+                <img src="./images/img1.jpg" alt="Десктопные приложения" width=370>
+            </li>
+            <li>
+                <img src="./images/img2.jpg" alt="Мобильные приложения" width=370>
+            </li>
+            <li>
+                <img src="./images/img3.jpg" alt="Дизайнерские решения" width=370>
+            </li>
         </ul>
     </section>
 
-    <section class="team">
+    <section class="team container">
         <h2 class="title">Наша команда</h2>
         <ul class="squad list">
             <li>
@@ -94,16 +114,24 @@
 </main>
 
 <footer class="footer">
-    <a href="./index.html" class="logo link" lang="en">
-        <span class="accent">Web</span><span class="text">Studio</span>
-    </a>
-    <address>
-        <ul class="address list">
-            <li><a class="fact link" href="https://goo.gl/maps/kG6ZxLyjDZMwMeht5" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></Li>
-            <li><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></Li>
-           <li><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></Li>
-        </ul>
-    </address>
+    <div class="container">
+        <a href="./index.html" class="logo link" lang="en">
+            <span class="accent">Web</span><span class="text">Studio</span>
+        </a>
+        <address>
+            <ul class="address list">
+                <li>
+                    <a class="fact link" href="https://goo.gl/maps/kG6ZxLyjDZMwMeht5" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li>
+                    <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+             </ul>
+        </address>
+    </div>
 </footer>
 </body>
 </html>
