add more div, fix lang

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,13 +20,13 @@
             </a>
             <ul class="site-nav list">
                 <li>
-                <a class="site-nav-link link current" href="./index.html">Студия</a>
+                <a class="site-nav-link link current" href="./index.html">Студія</a>
                 </li>
                 <li>
-                <a class="site-nav-link link" href="./portfolio.html">Портфолио</a>
+                <a class="site-nav-link link" href="./portfolio.html">Портфоліо</a>
                 </li>
                 <li>
-                <a class="site-nav-link link" href="#" >Контакты</a>
+                <a class="site-nav-link link" href="#" >Контакти</a>
                 </li>
             </ul>
         </nav>
@@ -44,72 +44,79 @@
 <main>
     <section class="hero">
         <div class="container">
-            <h1 class="main">Эффективные решения для вашего бизнеса</h1>
-            <button class="button" type="button">Заказать услугу</button>
+            <h1 class="main">Ефективні рішення для вашого бізнесу</h1>
+            <button class="button" type="button">Замовити послугу</button>
         </div>
     </section>
 
-    <section class="characteristic container">
-        <h2 class="invisible">Особенности</h2>
-        <ul class="distinction list">
-            <li>
-                <h3 class="title">Внимание к деталям</h3>
-                <p class="point">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
-            <li> 
-                <h3 class="title">Пунктуальность</h3>
-                <p class="point">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li>
-            <li> 
-                <h3 class="title">Планирование </h3>
-                <p class="point">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
-            <li> 
-                <h3 class="title">Современные технологии</h3>
-                <p class="point">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
-        </ul>
+    <section class="characteristic">
+        <div class="container">
+            <h2 class="invisible">Особливості</h2>
+            <ul class="distinction list">
+                <li>
+                   <h3 class="title">Увага до деталей</h3>
+                    <p class="point">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li>
+                    <h3 class="title">Пунктуальність</h3>
+                    <p class="point">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li>
+                    <h3 class="title">Планування</h3>
+                    <p class="point">Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                 <li>
+                    <h3 class="title">Сучасні технології</h3>
+                    <p class="point">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
+        </div>
     </section>
 
-    <section class="essential container">
-        <h2 class="title">Чем мы занимаемся</h2>
-        <ul class="images list">
-            <li>
-                <img src="./images/img1.jpg" alt="Десктопные приложения" width=370>
-            </li>
-            <li>
-                <img src="./images/img2.jpg" alt="Мобильные приложения" width=370>
-            </li>
-            <li>
-                <img src="./images/img3.jpg" alt="Дизайнерские решения" width=370>
-            </li>
-        </ul>
+    <section class="essential">
+        <div class="container">
+            <h2 class="title">Чим ми займаємося</h2>
+            <ul class="images list">
+                <li>
+                    <img src="./images/img1.jpg" alt="Десктопні додатки" width=370>
+                </li>
+                <li>
+                    <img src="./images/img2.jpg" alt="Мобільні додатки" width=370>
+                </li>
+                <li>
+                    <img src="./images/img3.jpg" alt="Дизайнерскі рішення" width=370>
+                </li>
+            </ul>
+        </div>
     </section>
 
-    <section class="team container">
-        <h2 class="title">Наша команда</h2>
-        <ul class="squad list">
-            <li>
-                <img class="img" src="./images/img4.jpg" alt="Игорь Демьяненко" width=270>
-                <h3 class="people">Игорь Демьяненко</h3>
-                <p class="texts">Product Designer</p>
-            </li>
-            <li>
-                <img class="img" src="./images/img5.jpg" alt="Ольга Репина" width=270>
-                <h3 class="people">Ольга Репина</h3>
-                <p class="texts">Frontend Developer</p>
-            </li>
-            <li>
-                <img class="img" src="./images/img6.jpg" alt="Николай Тарасов" width=270>
-                <h3 class="people">Николай Тарасов</h3>
-                <p class="texts">Marketing</p>
-            </li>
-            <li>
-                <img class="img" src="./images/img7.jpg" alt="Михаил Ермаков" width=270>
-                <h3 class="people">Михаил Ермаков</h3>
-                <p class="texts">UI Designer</p>
-            </li>
-        </ul>
+    <section class="team">
+        <div class="container">
+            <h2 class="title">Наша команда</h2>
+            <ul class="squad list">
+                <li>
+                    <img class="img" src="./images/img4.jpg" alt="Игорь Демьяненко" width=270>
+                    <h3 class="people">Ігор Дем'яненко</h3>
+                    <p class="texts" lang="en">Product Designer</p>
+                </li>
+                <li>
+                    <img class="img" src="./images/img5.jpg" alt="Ольга Репина" width=270>
+                    <h3 class="people">Ольга Рєпіна</h3>
+                    <p class="texts" lang="en">Frontend Developer</p>
+                </li>
+                <li>
+                    <img class="img" src="./images/img6.jpg" alt="Николай Тарасов" width=270>
+                    <h3 class="people">Микола Тарасов</h3>
+                    <p class="texts" lang="en">Marketing</p>
+                </li>
+                <li>
+                    <img class="img" src="./images/img7.jpg" alt="Михаил Ермаков" width=270>
+                    <h3 class="people">Михайло Єрмаков</h3>
+                    <p class="texts" lang="en">UI Designer</p>
+                </li>
+            </ul>
+        </div>
+        
     </section>
 </main>
 
@@ -121,7 +128,7 @@
         <address>
             <ul class="address list">
                 <li>
-                    <a class="fact link" href="https://goo.gl/maps/kG6ZxLyjDZMwMeht5" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a>
+                    <a class="fact link" href="https://goo.gl/maps/kG6ZxLyjDZMwMeht5" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
                 <li>
                     <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
