--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,13 +20,13 @@
             </a>
             <ul class="site-nav list">
                 <li> 
-                    <a class="site-nav-link link" href="./index.html">Студия</a>
+                    <a class="site-nav-link link" href="./index.html">Студія</a>
                 </li>
                 <li>
-                    <a class="site-nav-link link current" href="./portfolio.html">Портфолио</a>
+                    <a class="site-nav-link link current" href="./portfolio.html">Портфоліо</a>
                 </li>
                 <li>
-                    <a class="site-nav-link link" href="#">Контакты</a>
+                    <a class="site-nav-link link" href="#">Контакти</a>
                 </li>
             </ul>
         </nav>
@@ -42,90 +42,92 @@
 </header>
 
 <main>
-<section class="portfolio container">
-    <h1 class="invisible">Портфолио</h1>
-    <ul class="buttons list">
-        <li>
-            <button class="port-btn button-all" type="button">Все</button>
-        </li>
-        <li>
-            <button class="port-btn button-veb" type="button">Веб-сайты</button>
-        </li>
-        <li>
-            <button class="port-btn button-app" type="button">Приложения</button>
-        </li>
-        <li>
-            <button class="port-btn button-des" type="button">Дизайн</button>
-        </li>
-        <li>
-            <button class="port-btn button-mar" type="button">Маркетинг</button>
-        </li>
-    </ul>
-    <ul class="example list">
-        <li>
-            <a class="port-link link" href="#">
-                <img class="port-img" src="./images/img2.1.jpg" alt="Веб-сайт Технокряк " width="370">
-                <h2 class="subtitle">Технокряк</h2>
-                <p class="lists">Веб-сайт</p>
-            </a>
-        </li>
-        <li> 
-            <a class="port-link link" href="#">
-                <img class="port-img" src="./images/img2.2.jpg" alt="Дизайн постера" width="370">
-                <h2 class="subtitle">Постер New Orlean vs Golden Star</h2>
-                <p class="lists">Дизайн</p>
-            </a>
-        </li>
-        <li>
-            <a class="port-link link" href="#">
-                <img class="port-img" src="./images/img2.3.jpg" alt="Приложение Seafood" width="370">
-                <h2 class="subtitle">Ресторан Seafood</h2>
-                <p class="lists">Приложение</p>
-            </a>
-        </li>
-        <li>
-            <a class="port-link link" href="#">
-                <img class="port-img" src="./images/img2.4.jpg" alt="Маркетинг Проект Prime" width="370">
-                <h2 class="subtitle">Проект Prime</h2>
-                <p class="lists">Маркетинг</p>
-            </a>
-        </li>
-        <li>
-            <a class="port-link link" href="#">
-                <img class="port-img" src="./images/img2.5.jpg" alt="Приложение Boxes" width="370">
-                <h2 class="subtitle">Проект Boxes</h2>
-                <p class="lists">Приложение</p>
-            </a>
-        </li>
-        <li>
-            <a class="port-link link" href="#">
-                <img class="port-img" src="./images/img2.6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
-                <h2 class="subtitle">Inspiration has no Borders</h2>
-                <p class="lists">Веб-сайт</p>
-            </a>
-        </li>
-        <li>
-            <a class="port-link link" href="#">
-                <img class="port-img" src="./images/img2.7.jpg" alt="Дизайн издания Limited Edition" width="370">
-                <h2 class="subtitle">Издание Limited Edition</h2>
-                <p class="lists">Дизайн</p>
-            </a>
-        </li>
-        <li>
-            <a class="port-link link" href="#">
-                <img class="port-img" src="./images/img2.8.jpg" alt="Маркетинг проекта LAB" width="370">
-                <h2 class="subtitle">Проект LAB</h2>
-                <p class="lists">Маркетинг</p>
-            </a>
-        </li>
-        <li>
-            <a class="port-link link" href="#">
-                <img class="port-img" src="./images/img2.9.jpg" alt="Growing Business приложение" width="370">
-                <h2 class="subtitle">Growing Business</h2>
-                <p class="lists">Приложение</p>
-            </a>
-        </li>
-    </ul>
+<section class="portfolio">
+    <div class="container">
+        <h1 class="invisible">Портфоліо</h1>
+        <ul class="buttons list">
+            <li>
+                <button class="port-btn button-all" type="button">Все</button>
+            </li>
+            <li>
+                <button class="port-btn button-veb" type="button">Веб-сайти</button>
+            </li>
+            <li>
+                <button class="port-btn button-app" type="button">Додатки</button>
+            </li>
+            <li>
+                <button class="port-btn button-des" type="button">Дизайн</button>
+            </li>
+            <li>
+                <button class="port-btn button-mar" type="button">Маркетинг</button>
+            </li>
+        </ul>
+        <ul class="example list">
+            <li>
+                <a class="port-link link" href="#">
+                    <img class="port-img" src="./images/img2.1.jpg" alt="Веб-сайт Технокряк " width="370">
+                    <h2 class="subtitle">Технокряк</h2>
+                    <p class="lists">Веб-сайт</p>
+                </a>
+            </li>
+            <li>
+                <a class="port-link link" href="#">
+                    <img class="port-img" src="./images/img2.2.jpg" alt="Дизайн постера" width="370">
+                    <h2 class="subtitle">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
+                    <p class="lists">Дизайн</p>
+                </a>
+            </li>
+            <li>
+                <a class="port-link link" href="#">
+                    <img class="port-img" src="./images/img2.3.jpg" alt="Додаток Seafood" width="370">
+                    <h2 class="subtitle">Ресторан<span lang="en">Seafood</h2>
+                    <p class="lists">Додаток</p>
+                </a>
+            </li>
+            <li>
+                <a class="port-link link" href="#">
+                    <img class="port-img" src="./images/img2.4.jpg" alt="Маркетинг Проект Prime" width="370">
+                    <h2 class="subtitle">Проєкт <span lang="en">Prime</span></h2>
+                    <p class="lists">Маркетинг</p>
+                </a>
+            </li>
+            <li>
+                <a class="port-link link" href="#">
+                    <img class="port-img" src="./images/img2.5.jpg" alt="Додаток Boxes" width="370">
+                    <h2 class="subtitle">Проєкт <span lang="en">Boxes</span></h2>
+                    <p class="lists">Додаток</p>
+                </a>
+            </li>
+            <li>
+                <a class="port-link link" href="#">
+                    <img class="port-img" src="./images/img2.6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
+                    <h2 class="subtitle" lang="en">Inspiration has no Borders</h2>
+                    <p class="lists">Веб-сайт</p>
+                </a>
+            </li>
+            <li>
+                <a class="port-link link" href="#">
+                    <img class="port-img" src="./images/img2.7.jpg" alt="Дизайн видання Limited Edition" width="370">
+                    <h2 class="subtitle">Видання<span lang="en">Limited Edition</span></h2>
+                    <p class="lists">Дизайн</p>
+                </a>
+            </li>
+            <li>
+                <a class="port-link link" href="#">
+                    <img class="port-img" src="./images/img2.8.jpg" alt="Маркетинг проєкта LAB" width="370">
+                    <h2 class="subtitle">Проєкт<span lang="en">LAB</span></h2>
+                    <p class="lists">Маркетинг</p>
+                </a>
+            </li>
+            <li>
+                <a class="port-link link" href="#">
+                    <img class="port-img" src="./images/img2.9.jpg" alt="Growing Business додаток" width="370">
+                    <h2 class="subtitle" lang="en">Growing Business</h2>
+                    <p class="lists">Дизайн</p>
+                </a>
+            </li>
+        </ul>
+    </div>
 </section>
 </main>   
 
@@ -137,7 +139,7 @@
         <address>
             <ul class="address list">
                 <li>
-                    <a class="fact link" href="https://goo.gl/maps/kG6ZxLyjDZMwMeht5" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a>
+                    <a class="fact link" href="https://goo.gl/maps/kG6ZxLyjDZMwMeht5" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
                 <li>
                     <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
