add flex to header

--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
 </head>
 <body>
 <header class="header">
-    <div class="container">
+    <div class="header-container container">
         <nav class="header-nav">
             <a class="logo link" href="./index.html" lang="en">
                 <span class="accent">Web</span><span class="text">Studio</span>
             </a>
             <ul class="site-nav list">
-                <li>
+                <li class="site-nav-item">
                 <a class="site-nav-link link current" href="./index.html">Студія</a>
                 </li>
-                <li>
+                <li class="site-nav-item">
                 <a class="site-nav-link link" href="./portfolio.html">Портфоліо</a>
                 </li>
-                <li>
+                <li class="site-nav-item">
                 <a class="site-nav-link link" href="#" >Контакти</a>
                 </li>
             </ul>
         </nav>
         <ul class="contacts list">
-            <li>
+            <li class="contacts-item">
                 <a class="contacts-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a>
             </li>
-            <li>
+            <li class="contacts-item">
                 <a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
@@ -78,13 +78,13 @@
             <h2 class="title">Чим ми займаємося</h2>
             <ul class="images list">
                 <li>
-                    <img src="./images/img1.jpg" alt="Десктопні додатки" width=370>
+                    <img class="img" src="./images/img1.jpg" alt="Десктопні додатки" width=370>
                 </li>
                 <li>
-                    <img src="./images/img2.jpg" alt="Мобільні додатки" width=370>
+                    <img class="img" src="./images/img2.jpg" alt="Мобільні додатки" width=370>
                 </li>
                 <li>
-                    <img src="./images/img3.jpg" alt="Дизайнерскі рішення" width=370>
+                    <img class="img" src="./images/img3.jpg" alt="Дизайнерскі рішення" width=370>
                 </li>
             </ul>
         </div>
