--- a/portfolio.html
+++ b/portfolio.html
@@ -13,28 +13,28 @@
 </head>
 <body>
 <header class="header">
-    <div class="container">
+    <div class="header-container container">
         <nav class="header-nav"> 
             <a class="logo link" href="./index.html" lang="en">
                 <span class="accent">Web</span><span class="text">Studio</span>
             </a>
             <ul class="site-nav list">
-                <li> 
+                <li class="site-nav-item"> 
                     <a class="site-nav-link link" href="./index.html">Студія</a>
                 </li>
-                <li>
+                <li class="site-nav-item">
                     <a class="site-nav-link link current" href="./portfolio.html">Портфоліо</a>
                 </li>
-                <li>
-                    <a class="site-nav-link link" href="#">Контакти</a>
+                <li class="site-nav-item">
+                    <a class="sit<li class="site-nav-item">e-nav-link link" href="#">Контакти</a>
                 </li>
             </ul>
         </nav>
         <ul class="contacts list">
-            <li> 
+            <li class="contacts-item">
                 <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a> 
             </li>
-            <li>
+            <li class="contacts-item">
                 <a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
@@ -65,63 +65,63 @@
         <ul class="example list">
             <li>
                 <a class="port-link link" href="#">
-                    <img class="port-img" src="./images/img2.1.jpg" alt="Веб-сайт Технокряк " width="370">
+                    <img class="port-img img" src="./images/img2.1.jpg" alt="Веб-сайт Технокряк " width="370">
                     <h2 class="subtitle">Технокряк</h2>
                     <p class="lists">Веб-сайт</p>
                 </a>
             </li>
             <li>
                 <a class="port-link link" href="#">
-                    <img class="port-img" src="./images/img2.2.jpg" alt="Дизайн постера" width="370">
+                    <img class="port-img img" src="./images/img2.2.jpg" alt="Дизайн постера" width="370">
                     <h2 class="subtitle">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
                     <p class="lists">Дизайн</p>
                 </a>
             </li>
             <li>
                 <a class="port-link link" href="#">
-                    <img class="port-img" src="./images/img2.3.jpg" alt="Додаток Seafood" width="370">
+                    <img class="port-img img" src="./images/img2.3.jpg" alt="Додаток Seafood" width="370">
                     <h2 class="subtitle">Ресторан<span lang="en">Seafood</h2>
                     <p class="lists">Додаток</p>
                 </a>
             </li>
             <li>
                 <a class="port-link link" href="#">
-                    <img class="port-img" src="./images/img2.4.jpg" alt="Маркетинг Проект Prime" width="370">
+                    <img class="port-img img" src="./images/img2.4.jpg" alt="Маркетинг Проект Prime" width="370">
                     <h2 class="subtitle">Проєкт <span lang="en">Prime</span></h2>
                     <p class="lists">Маркетинг</p>
                 </a>
             </li>
             <li>
                 <a class="port-link link" href="#">
-                    <img class="port-img" src="./images/img2.5.jpg" alt="Додаток Boxes" width="370">
+                    <img class="port-img img" src="./images/img2.5.jpg" alt="Додаток Boxes" width="370">
                     <h2 class="subtitle">Проєкт <span lang="en">Boxes</span></h2>
                     <p class="lists">Додаток</p>
                 </a>
             </li>
             <li>
                 <a class="port-link link" href="#">
-                    <img class="port-img" src="./images/img2.6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
+                    <img class="port-img img" src="./images/img2.6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
                     <h2 class="subtitle" lang="en">Inspiration has no Borders</h2>
                     <p class="lists">Веб-сайт</p>
                 </a>
             </li>
             <li>
                 <a class="port-link link" href="#">
-                    <img class="port-img" src="./images/img2.7.jpg" alt="Дизайн видання Limited Edition" width="370">
+                    <img class="port-img img" src="./images/img2.7.jpg" alt="Дизайн видання Limited Edition" width="370">
                     <h2 class="subtitle">Видання<span lang="en">Limited Edition</span></h2>
                     <p class="lists">Дизайн</p>
                 </a>
             </li>
             <li>
                 <a class="port-link link" href="#">
-                    <img class="port-img" src="./images/img2.8.jpg" alt="Маркетинг проєкта LAB" width="370">
+                    <img class="port-img img" src="./images/img2.8.jpg" alt="Маркетинг проєкта LAB" width="370">
                     <h2 class="subtitle">Проєкт<span lang="en">LAB</span></h2>
                     <p class="lists">Маркетинг</p>
                 </a>
             </li>
             <li>
                 <a class="port-link link" href="#">
-                    <img class="port-img" src="./images/img2.9.jpg" alt="Growing Business додаток" width="370">
+                    <img class="port-img img" src="./images/img2.9.jpg" alt="Growing Business додаток" width="370">
                     <h2 class="subtitle" lang="en">Growing Business</h2>
                     <p class="lists">Дизайн</p>
                 </a>
