--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                     <a class="site-nav-link link current" href="./portfolio.html">Портфоліо</a>
                 </li>
                 <li class="site-nav-item">
-                    <a class="sit<li class="site-nav-item">e-nav-link link" href="#">Контакти</a>
+                    <a class="site-nav-link link" href="#">Контакти</a>
                 </li>
             </ul>
         </nav>
