--- a/portfolio.html
+++ b/portfolio.html
@@ -46,19 +46,19 @@
     <div class="container">
         <h1 class="invisible">Портфоліо</h1>
         <ul class="buttons list">
-            <li>
+            <li class="port-btn-list-item">
                 <button class="port-btn button-all" type="button">Все</button>
             </li>
-            <li>
+            <li class="port-btn-list-item">
                 <button class="port-btn button-veb" type="button">Веб-сайти</button>
             </li>
-            <li>
+            <li class="port-btn-list-item">
                 <button class="port-btn button-app" type="button">Додатки</button>
             </li>
-            <li>
+            <li class="port-btn-list-item">
                 <button class="port-btn button-des" type="button">Дизайн</button>
             </li>
-            <li>
+            <li class="port-btn-list-item">
                 <button class="port-btn button-mar" type="button">Маркетинг</button>
             </li>
         </ul>
@@ -76,7 +76,7 @@
                 <a class="port-link link" href="#">
                     <img class="port-img img" src="./images/img2.2.jpg" alt="Дизайн постера" width="370">
                     <div class="port-wrapper">
-                        <h2 class="subtitle">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
+                        <h2 class="subtitle">Постер<span lang="en"> New Orlean vs Golden Star</span></h2>
                         <p class="lists">Дизайн</p>
                     </div>
                 </a>
@@ -85,7 +85,7 @@
                 <a class="port-link link" href="#">
                     <img class="port-img img" src="./images/img2.3.jpg" alt="Додаток Seafood" width="370">
                     <div class="port-wrapper">
-                        <h2 class="subtitle">Ресторан<span lang="en">Seafood</h2>
+                        <h2 class="subtitle">Ресторан<span lang="en"> Seafood</h2>
                         <p class="lists">Додаток</p>
                     </div>
                 </a>
@@ -121,7 +121,7 @@
                 <a class="port-link link" href="#">
                     <img class="port-img img" src="./images/img2.7.jpg" alt="Дизайн видання Limited Edition" width="370">
                    <div class="port-wrapper">
-                    <h2 class="subtitle">Видання<span lang="en">Limited Edition</span></h2>
+                    <h2 class="subtitle">Видання<span lang="en"> Limited Edition</span></h2>
                     <p class="lists">Дизайн</p>
                    </div>
                 </a>
@@ -130,7 +130,7 @@
                 <a class="port-link link" href="#">
                     <img class="port-img img" src="./images/img2.8.jpg" alt="Маркетинг проєкта LAB" width="370">
                     <div class="port-wrapper">
-                        <h2 class="subtitle">Проєкт<span lang="en">LAB</span></h2>
+                        <h2 class="subtitle">Проєкт<span lang="en"> LAB</span></h2>
                         <p class="lists">Маркетинг</p>
                     </div>
                 </a>
