--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
     </section>
 
-    <section class="essential">
+    <section class="essential section">
         <div class="container">
             <h2 class="title">Чим ми займаємося</h2>
             <ul class="images-list list">
@@ -98,7 +98,7 @@
         </div>
     </section>
 
-    <section class="team">
+    <section class="team section">
         <div class="container">
             <h2 class="title">Наша команда</h2>
             <ul class="team-list list">
