--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
 </header>
 
 <main>
-<section class="portfolio">
+<section class="portfolio section">
     <div class="container">
         <h1 class="invisible">Портфоліо</h1>
         <ul class="buttons list">
