--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         </div>
     </section>
 
-    <section class="characteristic">
+    <section class="characteristic section">
         <div class="container">
-            <h2 class="invisible">Особливості</h2>
+            <h2 class="visually-hidden">Особливості</h2>
             <ul class="distinction-list list">
                 <li class="dist-list-item">
                    <div class="dist-list-container">
