--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
 <main>
 <section class="portfolio section">
     <div class="container">
-        <h1 class="invisible">Портфоліо</h1>
+        <h1 class="visually-hidden">Портфоліо</h1>
         <ul class="buttons list">
             <li class="port-btn-list-item">
                 <button class="port-btn button-all" type="button">Все</button>
